# eduflox

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml
eduflox/: settings.py  urls.py  wsgi.py
eduflox/agents/: .gitignore  README.md  forms.py  models.py  package-lock.json  package.json  urls.py  views.py  vue.config.js
eduflox/agents/migrations/: 0001_initial.py
eduflox/agents/public/: index.html
eduflox/agents/src/: App.vue  main.js  plugin.js  plugins.js
eduflox/agents/src/assets/scss/: app.scss
eduflox/agents/src/components/: App.vue  index.js
eduflox/agents/src/components/school/: Form.vue  List.vue
eduflox/agents/src/components/services/: Form.vue  List.vue
eduflox/agents/src/store/: constants.js  contants.js  index.js
eduflox/agents/src/store/actions/: school.js  service.js
eduflox/agents/static/agents/: main.css
eduflox/agents/static/agents/js/: schools.js
eduflox/agents/templates/: base.html
eduflox/agents/templates/agents/: base.html  columns.html  dashboard.html  home.html  schools.html  services.html
eduflox/agents/templates/agents/snippets/: sidebar.html
eduflox/agents/templates/emails/: activation.html
eduflox/agents/templates/registration/: login.html
eduflox/api/: models.py  serializers.py  urls.py  views.py
eduflox/api/migrations/: 0001_initial.py  0002_auto_20180930_0625.py
