[tool.poetry]
name = "eduflox"
version = "0.0.1"
description = "Eduflox Marketing Portal"
authors = ["Abraham Yusuf <aaondowasey@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
django = "^2.0"
djangorestframework = "^3.8"
markdown = "^2.6"
django-filter = "^2.0"
coreapi = "^2.3"
pygments = "^2.2"

[tool.poetry.dev-dependencies]
poetry = "^0.11.4"
black = "^18.3-alpha.0"
coreapi-cli = "^1.0"
